# uxchar

./: CMakeLists.txt  README.md  bytestoustr.c  equals.cpp  find.cpp  indexing.cpp  length.cpp  main.c  main.cpp  makefile  test.c  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  to_const_char_ptr.cpp  unew.c  unicode.c  unicode.h  ustrfill.c  ustrfree.c  ustrlen.c  ustrlenbytes.c  ustrtobytes.c  uxchar.h  uxstring.cpp
src/: bytestoustr.c  clear.cpp  empty.cpp  equals.cpp  find.cpp  indexing.cpp  length.cpp  to_const_char_ptr.cpp  unew.c  ustrfill.c  ustrfree.c  ustrlen.c  ustrlenbytes.c  ustrtobytes.c  uxstring.cpp
src/uxchar/: equals.cpp  size.cpp  uxchar.cpp
src/uxstring/: clear.cpp  empty.cpp  equals.cpp  find.cpp  indexing.cpp  length.cpp  to_const_char_ptr.cpp  uxstring.cpp
test/: test1.cpp  test10.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp
